When loading any url/uri (attachments, audio alarm files, procedure alarm application), make sure we load it as utf8 and not latin1.

By default, QString(const char*) treats the string as latin1, so we need to use QString::fromUtf8 instead.

BUG: 140688

svn path=/branches/KDE/3.5/kdepim/; revision=627541