libkcal/icalformatimpl.cpp
@@ -1204,11 +1204,11 @@ Attachment *ICalFormatImpl::readAttachment(icalproperty *attach)
     if (isurl == 0)
       attachment = new Attachment((const char*)icalattach_get_data(a));
     else {
-      attachment = new Attachment(QString(icalattach_get_url(a)));
+      attachment = new Attachment(QString::fromUtf8(icalattach_get_url(a)));
     }
   }
   else if ( value_kind == ICAL_URI_VALUE ) {
-    attachment = new Attachment(QString(icalvalue_get_uri(icalproperty_get_value(attach))));
+    attachment = new Attachment(QString::fromUtf8(icalvalue_get_uri(icalproperty_get_value(attach))));
   }
 
   icalparameter *p = icalproperty_get_first_parameter(attach, ICAL_FMTTYPE_PARAMETER);
